--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 ]
 dependencies = [
   'torch >= 2.5.1',
+  'torchcodec',
   'huggingface_hub >= 0.26',
   'cython',
   'gitpython >= 3.1',
