--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
   'opencv-python >= 4.8',
   'scipy >= 1.7',
   'tqdm >= 4.66.1',
-  'gradio >= 3.34',
+  'gradio >= 3.34, <6.0',
   'einops >= 0.6',
   'hydra-core >= 1.3.2',
   'requests',
